# policy-lint

./: PROVENANCE.md  README.md  policy_lint.py  pyproject.toml  test_policy_lint.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: sample_statements.txt
