[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "policy-lint"
version = "0.1.0"
description = "Deterministic governance statement linter. No AI. No ML."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
policy-lint = "policy_lint:main"

[tool.pytest.ini_options]
testpaths = ["."]
